#33 - add refresh endpoint
