# scigateway-auth/openapi.yaml
@@ -2,30 +2,62 @@ openapi: 3.0.0
 info:
   description: scigateway authentication api
   title: scigateway-auth
-  version: '0'
+  version: "0"
 servers:
-- url: http://localhost:5050
+  - url: http://localhost:5050
 paths:
   /verify:
     post:
       requestBody:
-          description: The JWT that is to be verified by the api.
-          required: true
+        description: The JWT that is to be verified by the api.
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+            example:
+              token: xxxxx.yyyyy.zzzzz
+      responses:
+        "400":
+          description: When a bad request is sent
+        "401":
+          description: When no post body is sent
+        "403":
+          description: When the token is not valid
+        "200":
+          description: When the token is valid
+  /refresh:
+    post:
+      summary: Use a refresh token to generate a new access token from an old one
+      parameters:
+        - in: cookie
+        name: scigateway:refresh_token
+        schema:
+          type: string
+          example: xxxxx.yyyyy.zzzzz
+      requestBody:
+        description: The old access token that needs refreshing
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                token:
+                  type: string
+                  example: "xxxxx.yyyyy.zzzzz"
+      responses:
+        "200":
+          description: A new access token
           content:
             application/json:
               schema:
-                type: object
-              example:
-                token: xxxxx.yyyyy.zzzzz
-      responses:
-        '400':
-          description: When a bad request is sent
-        '401':
-          description: When no post body is sent
-        '403':
-          description: When the token is not valid
-        '200':
-          description: When the token is valid
+                type: string
+                example: xxxxx.yyyyy.zzzzz
+        "400":
+          description: When either the refresh token or access token are missing
+        "403":
+          description: When either the refresh token is unauthorized or the access token is unable to be refreshed
   /login:
     post:
       requestBody:
@@ -41,12 +73,11 @@ paths:
                 - username: user
                 - password: password
       responses:
-        '400':
+        "400":
           description: When a bad request is sent
-        '401':
+        "401":
           description: When no post body is sent
-        '200':
+        "200":
           description: A JWT
-        '403':
+        "403":
           description: When bad credentials are provided
-        
